@@ -1,3 +1,11 @@
+2002-08-17  Bruno Haible  <bruno@clisp.org>
+
+	* urlget.c (fetch): Also try invoking the 'curl' program.
+
+2002-08-06  Bruno Haible  <bruno@clisp.org>
+
+	* gettext-0.11.5 released.
+
 2002-08-02  Bruno Haible  <bruno@clisp.org>
 
 	* read-mo.c (get_sysdep_string): Make the error message easier to
